// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders with the right styles by default 1`] = `
<DocumentFragment>
  <span
    style="display: inline-block; min-width: 10px; width: 10px;"
  />
</DocumentFragment>
`;

exports[`Separator > renders with the specified orientation 1`] = `
<DocumentFragment>
  <span
    style="display: block; flex-shrink: 0; height: 10px; min-height: 10px;"
  />
</DocumentFragment>
`;

exports[`Separator > renders with the specified units 1`] = `
<DocumentFragment>
  <span
    style="display: inline-block; min-width: 123px; width: 123px;"
  />
</DocumentFragment>
`;
